# fake-projects

./: Makefile  README.md  main.py  pyproject.toml
fake_projects/: api.py  app.py
