[tool.poetry]
name = "fake-projects"
version = "0.1.0"
description = ""
authors = ["roblesdotdev <httpsnip@gmail.com>"]
readme = "README.md"
packages = [{include = "fake_projects"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
