[tool.poetry]
name = "fake-projects"
version = "0.1.0"
description = ""
authors = ["roblesdotdev <httpsnip@gmail.com>"]
readme = "README.md"
packages = [{include = "fake_projects"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
